<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg4"
    android:onClick="additem"
    android:padding="10dp">

    <TextView
        android:id="@+id/tasksTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:fontFamily="casual"
        android:text="@string/items"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tasksTest"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:fontFamily="casual"
        android:text="@string/tap_and_hold_on_the_item_that_you_want_to_remove"
        android:textColor="@android:color/white"
        android:textSize="11sp" />

    <ListView
        android:id="@+id/itemsListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/message"
        android:background="@android:color/transparent"
        android:nestedScrollingEnabled="true"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:contentDescription="@string/todo"
        android:onClick="additem"
        android:src="@drawable/add2"
        tools:ignore="ContentDescription" />
</RelativeLayout>

